fixing icon spacing

--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,7 @@ i{
     color: #42b549
 }
 .icon{
+    padding-left: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -344,6 +345,9 @@ footer{
     }
     #nav-bar{
         width: 70%;
+    }
+    .icon{
+        padding-left: 0;
     }
     iframe{
         width: 300px;
